--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+.app-container {
+  max-width: 1000px;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #158678;
   text-align: center;
+  font-size: 30px;
+  color: #ecdddd;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 20px;
+}
+
+.display {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background-color: #409fe3;
+  font-size: 50px;
+  border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.display-red {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background-color: #95ab93;
+  font-size: 50px;
+  border: 1px solid red;
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons-wrapper {
+  width: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  border: 1px solid black;
+  padding: 10px 0;
+}
+
+.button {
+  width: 50px;
+  height: 30px;
+  background-color: #15a3e9;
+  border: none;
+  cursor: pointer;
 }
